@@ -1,3 +1,9 @@
+Mon Dec 19 10:27:45 UTC 2011  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/Time_Policy/main.cpp:
+
+          Added preprocessor tests to detect properly configured HR timer support.
+
 Sat Dec 17 18:13:40 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
